fixed logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@
                 }
                 #logo {
                     width: 320px;
-                    margin-right: 8px;
                     height: auto;
                 }
                 .bold {
